fixed hero mobile top spacing

--- a/src/component/HeroSection/index.css
+++ b/src/component/HeroSection/index.css
@@ -181,6 +181,7 @@
 @media screen and (max-width: 768px) {
   .hero-container {
     justify-content: center;
+    align-items: top;
     text-align: center;
     padding: 0 25px;
   }
